<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:cardBackgroundColor="#000000"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="150dp"
            android:layout_height="136dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/coinImage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:src="@drawable/bitcoin" />

            <TextView
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symbol"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/marketCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/market_cap"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>